Update: gradle build updated to generate DMG and EXE packages